added lang strings for filter options and new h1 header and new table details

--- a/source/package/components/com_xiveirm/site/language/en-GB.com_xiveirm.ini
+++ b/source/package/components/com_xiveirm/site/language/en-GB.com_xiveirm.ini
@@ -13,6 +13,8 @@ COM_XIVEIRM_SAVE_ITEM = "Save"
 COM_XIVEIRM_API_SAVED_BUTTON = "Saved"
 COM_XIVEIRM_API_ERROR_BUTTON = "Error!"
 COM_XIVEIRM_API_ERROR_TRY_AGAIN_BUTTON = "Error! Try Again"
+COM_XIVEIRM_SEARCH = "Search"
+COM_XIVEIRM_MORE = "More"
 COM_XIVEIRM_UPDATE_ITEM = "Update"
 COM_XIVEIRM_ADD_ITEM = "Add new"
 COM_XIVEIRM_EDIT_ITEM = "Edit"
@@ -36,17 +38,31 @@ COM_XIVEIRM_SELECT_TRAITS_SPECIFIC = "%s specific Traits"
 COM_XIVEIRM_PREVENT_LEAVE_SITE = "Note: All your changes will be lost to this customer. Are you sure you want to leave this page?"
 COM_XIVEIRM_PREVENT_FORM_SUBMISSION = "Another form on this page has been changed. Are you sure you want to continue with this form submission?"
 
+; Filter options
+COM_XIVEIRM_FILTER_CATEGORY_LBL = "Category Filter"
+COM_XIVEIRM_FILTER_SEARCH_LBL = "Search for Words"
+COM_XIVEIRM_FILTER_SEARCH_PHOLD = "Type in here..."
+COM_XIVEIRM_FILTER_PDK_LBL = "Predefined Keys"
+COM_XIVEIRM_FILTER_PDK_BTN_NO_CUSTOMER_ID = "No Customer ID"
+COM_XIVEIRM_FILTER_PDK_BTN_IN_COUNTRY = "In my country"
+COM_XIVEIRM_FILTER_PDK_BTN_NOT_IN_COUNTRY = "Not in my country"
+COM_XIVEIRM_FILTER_PDK_BTN_SPECIAL_CHARS = "With special chars"
+COM_XIVEIRM_RESET_FILTER = "Reset Filter"
 
 ; IRMContacsList Responsive Content
-COM_XIVEIRM_DES_CONTACT_LIST_CONTACTS_ALL = "List of all Contacts in Database"
-COM_XIVEIRM_TAB_CONTACT_LIST_CONTACTS_ALL = "List of all Contacts"
-COM_XIVEIRM_PHO_CONTACT_LIST_CONTACTS_ALL = "All Contacts"
-COM_XIVEIRM_DES_CONTACT_LIST_CONTACTS_STARTS = "List of Contacts that last name starts with:"
-COM_XIVEIRM_TAB_CONTACT_LIST_CONTACTS_STARTS = "List of Contacts starts with:"
-COM_XIVEIRM_PHO_CONTACT_LIST_CONTACTS_STARTS = "Contacts starts with:"
-COM_XIVEIRM_DES_CONTACT_LIST_CONTACTS_LIKE = "List of all Contacts named like:"
-COM_XIVEIRM_TAB_CONTACT_LIST_CONTACTS_LIKE = "All Contacts named like:"
-COM_XIVEIRM_PHO_CONTACT_LIST_CONTACTS_LIKE = "Contacts like:"
+COM_XIVEIRM_CONTACT_LIST_CONTACTS_ALL = "<span class=\"hidden-phone\">List of all </span><span class=\"visible-phone\">All </span>contacts"
+COM_XIVEIRM_CONTACT_LIST_CONTACTS_CAT = "<span class=\"hidden-phone\">Category: </span>"
+COM_XIVEIRM_CONTACT_LIST_CONTACTS_CUSTOM = "Search: %s"
+COM_XIVEIRM_CONTACT_LIST_CONTACTS_FILTER_PDK = "Filter:"
+COM_XIVEIRM_CONTACT_LIST_CONTACTS_FILTER_PDK_FLAGGED = "Open flags"
+COM_XIVEIRM_CONTACT_LIST_CONTACTS_FILTER_PDK_INCOMPLETE_ADDRESS = "Incomplete addresses"
+COM_XIVEIRM_CONTACT_LIST_CONTACTS_FILTER_PDK_NO_PHONE = "No phone numbers"
+COM_XIVEIRM_CONTACT_LIST_CONTACTS_FILTER_PDK_CHECKED_OUT = "Checked out"
+COM_XIVEIRM_CONTACT_LIST_CONTACTS_FILTER_PDK_IN_COUNTRY = "In my country"
+COM_XIVEIRM_CONTACT_LIST_CONTACTS_FILTER_PDK_NOT_IN_COUNTRY = "Not in my country"
+COM_XIVEIRM_CONTACT_LIST_CONTACTS_FILTER_PDK_SPECIAL = "Special chars in name"
+COM_XIVEIRM_CONTACT_LIST_CONTACTS_FILTER_PDK_NO_CUSTOMER_ID = "No Customer ID"
+COM_XIVEIRM_CONTACT_LIST_CONTACTS_FILTER_UNKNOWN = "You've set an unknown filter. Please notify the Support about this issue! Code: 8001"
 
 ; XiveIRM Flags
 COM_XIVEIRM_CONTACT_LIST_FLAGGED = "Flag set for: "
@@ -125,3 +141,29 @@ COM_XIVEIRM_CONTACT_GENDER_UNKNOWN = "Unknown"
 COM_XIVEIRM_CONTACT_GENDER_FEMALE = "Female"
 COM_XIVEIRM_CONTACT_GENDER_MALE = "Male"
 COM_XIVEIRM_CONTACT_GENDER_COMPANY = "Company"
+
+; Contacts List ----------------------------------------
+COM_XIVEIRM_CONTACTS_LIST_TH_ID = "ID"
+COM_XIVEIRM_CONTACTS_LIST_TH_NAME = "Name"
+COM_XIVEIRM_CONTACTS_LIST_TH_DOB = "Date of Birth"
+COM_XIVEIRM_CONTACTS_LIST_TH_ADDRESS = "Address"
+COM_XIVEIRM_CONTACTS_LIST_TH_PHONE = "Phone"
+COM_XIVEIRM_CONTACTS_LIST_TH_STATUS = "Status"
+COM_XIVEIRM_CONTACTS_LIST_TD_MODIFIED = "Modified"
+COM_XIVEIRM_CONTACTS_LIST_TF_NUMERIC_ID_TITLE = "Numeric ID"
+COM_XIVEIRM_CONTACTS_LIST_TF_NUMERIC_ID_CONTENT = "If a customer id is set, the system determine it as numeric.<br>This id can also be used to generate Barcodes."
+COM_XIVEIRM_CONTACTS_LIST_TF_ALPHA_NUMERIC_ID_TITLE = "Alphanumeric ID"
+COM_XIVEIRM_CONTACTS_LIST_TF_ALPHA_NUMERIC_ID_CONTENT = "If a customer id is set, the system determine it as alphanumeric.<br>This id can also be used to generate QR-Codes."
+COM_XIVEIRM_CONTACTS_LIST_TF_SYSTEM_ID_TITLE = "System ID"
+COM_XIVEIRM_CONTACTS_LIST_TF_SYSTEM_ID_CONTENT = "If no customer id is set, the system id is used with this icon.<br>It is not recommended to use this id to generate Barcodes or QR-Codes."
+COM_XIVEIRM_CONTACTS_LIST_TF_GENDER_UNKNOWN_TITLE = "Unknown"
+COM_XIVEIRM_CONTACTS_LIST_TF_GENDER_UNKNOWN_CONTENT = "This is a unknown gender icon"
+COM_XIVEIRM_CONTACTS_LIST_TF_GENDER_FEMALE_TITLE = "Female"
+COM_XIVEIRM_CONTACTS_LIST_TF_GENDER_FEMALE_CONTENT = "This is a female gender icon"
+COM_XIVEIRM_CONTACTS_LIST_TF_GENDER_MALE_TITLE = "Male"
+COM_XIVEIRM_CONTACTS_LIST_TF_GENDER_MALE_CONTENT = "This is a male gender icon"
+COM_XIVEIRM_CONTACTS_LIST_TF_GENDER_COMPANY_TITLE = "This is a company"
+COM_XIVEIRM_CONTACTS_LIST_TF_GENDER_COMPANY_CONTENT = "Set the date of birth to 01.01.0001<br>(Tip: Hit 8 times key 0 in chrome)"
+COM_XIVEIRM_CONTACTS_LIST_TF_INTERNAL_REMARK_TITLE = "Internal remarks"
+COM_XIVEIRM_CONTACTS_LIST_TF_INTERNAL_REMARK_CONTENT = "Internal remarks are used only intern. Contacts or customers won't see this!"
+COM_XIVEIRM_CONTACTS_LIST_TF_ = ""
