fix last modified issue

--- a/source/package/plugins/plg_irmwidgetscontact_corewidget/language/en-GB/en-GB.plg_irmwidgetscontact_corewidget.ini
+++ b/source/package/plugins/plg_irmwidgetscontact_corewidget/language/en-GB/en-GB.plg_irmwidgetscontact_corewidget.ini
@@ -8,3 +8,5 @@ PLG_IRMWIDGETSCONTACT_COREWIDGET = "IRMWidgetsContact - Core widget"
 PLG_IRMWIDGETSCONTACT_COREWIDGET_XML_DESC = "Widget Plugin for the IRM Contact App which extends the base data view on the right with small helpers and/or statistics and other informations"
 
 PLG_IRMWIDGETSCONTACT_COREWIDGET_CONTAINERNAME = "Core Widget"
+PLG_IRMWIDGETSCONTACT_COREWIDGET_LAST_MODIFIED = "Last modified"
+PLG_IRMWIDGETSCONTACT_COREWIDGET_NOT_MODIFIED = "This contact has been never modified"
