added dashboard and search strings

--- a/source/package/components/com_xiveirm/administrator/language/en-GB.com_xiveirm.ini
+++ b/source/package/components/com_xiveirm/administrator/language/en-GB.com_xiveirm.ini
@@ -203,3 +203,8 @@ COM_XIVEIRM_FORM_LBL_TABAPP_STATE = "State"
 COM_XIVEIRM_FORM_DESC_TABAPP_STATE = "State Desc"
 COM_XIVEIRM_FORM_LBL_TABAPP_ORDERING = "Ordering"
 COM_XIVEIRM_FORM_DESC_TABAPP_ORDERING = "Ordering Desc"
+
+COM_XIVEIRM_TITLE_DASHBOARD = "Dashboard"
+COM_XIVEIRM_TITLE_DASHBOARD_DESC = "Show the Dashboard"
+COM_XIVEIRM_TITLE_SEARCH = "Search"
+COM_XIVEIRM_TITLE_SEARCH_DESC = "Show the Search"
