--- a/source/package/components/com_xiveirm/administrator/language/en-GB.com_xiveirm.sys.ini
+++ b/source/package/components/com_xiveirm/administrator/language/en-GB.com_xiveirm.sys.ini
@@ -24,3 +24,7 @@ COM_XIVEIRM_TITLE_ITEM_VIEW_API = "Single Api"
 COM_XIVEIRM_TITLE_ITEM_VIEW_API_DESC = "Show a specific Api"
 COM_XIVEIRM_TITLE_FORM_VIEW_API = "ApiForm"
 COM_XIVEIRM_TITLE_FORM_VIEW_API_DESC = "Show a form to add or edit a Api"
+COM_XIVEIRM_TITLE_DASHBOARD = "Dashboard"
+COM_XIVEIRM_TITLE_DASHBOARD_DESC = "Show the Dashboard"
+COM_XIVEIRM_TITLE_SEARCH = "Search"
+COM_XIVEIRM_TITLE_SEARCH_DESC = "Show the Search"
