--- a/source/package/components/com_xiveirm/administrator/language/en-GB.com_xiveirm.ini
+++ b/source/package/components/com_xiveirm/administrator/language/en-GB.com_xiveirm.ini
@@ -168,6 +168,10 @@ COM_XIVEIRM_TITLE_ITEM_VIEW_CONTACT = "Single Contact"
 COM_XIVEIRM_TITLE_ITEM_VIEW_CONTACT_DESC = "Show a specific Contact"
 COM_XIVEIRM_TITLE_FORM_VIEW_CONTACT = "ContactForm"
 COM_XIVEIRM_TITLE_FORM_VIEW_CONTACT_DESC = "Show a form to add or edit a Contact"
+COM_XIVEIRM_TITLE_LIST_VIEW_CONTACTS = "Dashboard"
+COM_XIVEIRM_TITLE_LIST_VIEW_CONTACTS_DESC = "Show the Dashboard"
+COM_XIVEIRM_TITLE_LIST_VIEW_CONTACTS = "Search"
+COM_XIVEIRM_TITLE_LIST_VIEW_CONTACTS_DESC = "Show the search site"
 COM_XIVEIRM_TITLE_OPTION = "Option"
 COM_XIVEIRM_LEGEND_OPTION = "Option"
 COM_XIVEIRM_FORM_LBL_OPTION_ID = "ID"
