added missed strings

--- a/source/package/components/com_xivetranscorder/administrator/language/en-GB.com_xivetranscorder.ini
+++ b/source/package/components/com_xivetranscorder/administrator/language/en-GB.com_xivetranscorder.ini
@@ -1,9 +1,10 @@
-COM_XIVETRANSCORDER="XiveTC - Transport Coordination"
-COM_XIVETRANSCORDER_COMPONENT_LABEL="Xivetranscorder"
-COM_XIVETRANSCORDER_CONFIGURATION="Xivetranscorder Configuration"
+COM_XIVETRANSCORDER="XiveTOCA - Transport Order and Coordination Application"
+COM_XIVETRANSCORDER_MENULINK="XiveTOCA"
+COM_XIVETRANSCORDER_COMPONENT_LABEL="XiveTransCorder"
+COM_XIVETRANSCORDER_CONFIGURATION="XiveTransCorder Configuration"
 COM_XIVETRANSCORDER_ACCESS_HEADING="Access"
-COM_XIVETRANSCORDER_COMPONENT_DESC="The Transport Coordination Order App for XiveIRM"
-COM_XIVETRANSCORDER_COMPONENT_LABEL="XiveTC - Transport Coordination"
+COM_XIVETRANSCORDER_COMPONENT_DESC = "The Transport Order and Coordination Application for XiveIRM"
+COM_XIVETRANSCORDER_COMPONENT_LABEL="XiveTOCA - Transport Order and Coordination Application"
 COM_XIVETRANSCORDER_N_ITEMS_ARCHIVED="%d items successfully archived"
 COM_XIVETRANSCORDER_N_ITEMS_ARCHIVED_1="%d item successfully archived"
 COM_XIVETRANSCORDER_N_ITEMS_CHECKED_IN_0="No item successfully checked in"
@@ -25,7 +26,8 @@ COM_XIVETRANSCORDER_FIELDSET_ITEM_ID_SELECT_LABEL="Required Settings"
 COM_XIVETRANSCORDER_FILTER_SELECT_LABEL=" - Select %s - "
 COM_XIVETRANSCORDER_TEST_LABEL="Test label"
 
-COM_XIVETRANSCORDER_TITLE_TRANSCORDERS="TransCorders"
+COM_XIVETRANSCORDER_TITLE_TRANSCORDERS = "Transport Orders"
+COM_XIVETRANSCORDER_TITLE_TRANSCORDERS_CATEGORIES = "Order Categories"
 COM_XIVETRANSCORDER_TRANSCORDERS_ID="ID"
 COM_XIVETRANSCORDER_TRANSCORDERS_CLIENT_ID="Client ID"
 COM_XIVETRANSCORDER_TRANSCORDERS_CLIENT_ID_FILTER="- Select client_id -"
@@ -71,19 +73,7 @@ COM_XIVETRANSCORDER_TITLE_TABAPPVALUES="Tabappvalues"
 COM_XIVETRANSCORDER_TABAPPVALUES_TRANSCORDER_ID="Transcorder ID"
 COM_XIVETRANSCORDER_TABAPPVALUES_TAB_KEY="Tab Key"
 COM_XIVETRANSCORDER_TABAPPVALUES_TAB_VALUE="Tab Value"
-COM_XIVETRANSCORDER_TITLE_RELATEDBILLINGS="Related Billings"
-COM_XIVETRANSCORDER_RELATEDBILLINGS_TRANSCORDER_ID="Transcorder ID"
-COM_XIVETRANSCORDER_RELATEDBILLINGS_TAB_KEY="Tab Key"
-COM_XIVETRANSCORDER_RELATEDBILLINGS_TAB_VALUE="Tab Value"
-COM_XIVETRANSCORDER_TITLE_RELATEDSTATISTICS="Related Statistics"
-COM_XIVETRANSCORDER_RELATEDSTATISTICS_TRANSCORDER_ID="Transcorder ID"
-COM_XIVETRANSCORDER_RELATEDSTATISTICS_TAB_KEY="Tab Key"
-COM_XIVETRANSCORDER_RELATEDSTATISTICS_TAB_VALUE="Tab Value"
-COM_XIVETRANSCORDER_TITLE_RELATEDREVISIONS="Related Revisions"
-COM_XIVETRANSCORDER_RELATEDREVISIONS_TRANSCORDER_ID="Transcorder ID"
-COM_XIVETRANSCORDER_RELATEDREVISIONS_TAB_KEY="Tab Key"
-COM_XIVETRANSCORDER_RELATEDREVISIONS_TAB_VALUE="Tab Value"
-COM_XIVETRANSCORDER_TITLE_TABAPPS="TabApps"
+COM_XIVETRANSCORDER_TITLE_TABAPPS="TabApps Config"
 COM_XIVETRANSCORDER_TABAPPS_ID="ID"
 COM_XIVETRANSCORDER_TABAPPS_CLIENT_ID="Client ID"
 COM_XIVETRANSCORDER_TABAPPS_ACCESS="Access Level"
@@ -201,6 +191,3 @@ COM_XIVETRANSCORDER_FORM_LBL_TABAPP_STATE="State"
 COM_XIVETRANSCORDER_FORM_DESC_TABAPP_STATE=""
 COM_XIVETRANSCORDER_FORM_LBL_TABAPP_ORDERING="Ordering"
 COM_XIVETRANSCORDER_FORM_DESC_TABAPP_ORDERING=""
-
-
-
