--- a/source/package/components/com_xiveirm/site/language/en-GB.com_xiveirm.ini
+++ b/source/package/components/com_xiveirm/site/language/en-GB.com_xiveirm.ini
@@ -71,7 +71,8 @@ COM_XIVEIRM_CONTACT_LIST_UNFLAGGED = "Flag removed for: "
 
 ; IRMContactGlobalForm ----------------------------------------
 COM_XIVEIRM_CONTACT_FORM_ADD_NEW_CONTACT = "Add a new contact"
-COM_XIVEIRM_CONTACT_FORM_ = ""
+COM_XIVEIRM_CONTACT_FORM_CLEAN_ADDRESS_TITLE = "Address option"
+COM_XIVEIRM_CONTACT_FORM_CLEAN_ADDRESS_DESC = "Click this button if you want to clean the address fields only!"
 COM_XIVEIRM_CONTACT_FORM_ = ""
 COM_XIVEIRM_CONTACT_FORM_TAB_BASICDATA = "Master data"
 COM_XIVEIRM_CONTACT_FORM_TAB_MORE = "More"
