--- a/source/package/components/com_xivetranscorder/site/language/en-GB.com_xivetranscorder.ini
+++ b/source/package/components/com_xivetranscorder/site/language/en-GB.com_xivetranscorder.ini
@@ -4,6 +4,9 @@ COM_XIVETRANSCORDER_ITEM_DELETED_SUCCESSFULLY="Item deleted successfully"
 COM_XIVETRANSCORDER_ITEM_NOT_LOADED="Could not load the item"
 COM_XIVETRANSCORDER_VIEW_FILE="[View File]"
 COM_XIVETRANSCORDER_ADD_ITEM="Add"
+COM_XIVETRANSCORDER_ADD_EMPTY_ITEM="Add empty"
+COM_XIVETRANSCORDER_COPY_ITEM="Copy"
+COM_XIVETRANSCORDER_COPY_THIS_ITEM="Copy this"
 COM_XIVETRANSCORDER_EDIT_ITEM="Edit"
 COM_XIVETRANSCORDER_DELETE_ITEM="Delete"
 COM_XIVETRANSCORDER_PUBLISH_ITEM="Publish"
@@ -12,3 +15,39 @@ COM_XIVETRANSCORDER_NO_ITEMS="There are no items in the list"
 COM_XIVETRANSCORDER_TITLE_FORM_VIEW_XXX_UPPER_INTERNAL_NAME_XXX_DESC="Show a form to add or edit a item"
 COM_XIVETRANSCORDER_TITLE_ITEM_VIEW_XXX_UPPER_INTERNAL_NAME_XXX_DESC="Show an item"
 COM_XIVETRANSCORDER_TITLE_LIST_VIEW_XXX_UPPER_INTERNAL_NAME_XXX_DESC="List all the items"
+
+
+; TransCorderForm
+COM_XIVETRANSCORDER_ORDER_FORM_ADD_NEW_ORDER = "Add a new Order"
+COM_XIVETRANSCORDER_ORDER_FORM_TAB_BASICDATA = "Coredatas"
+COM_XIVETRANSCORDER_FORM_LBL_ORDER_CATEGORY = "Category"
+COM_XIVETRANSCORDER_FORM_LBL_CONTACT = "Contact"
+COM_XIVETRANSCORDER_FORM_SELECT_CONTACT = "Please select a contact"
+COM_XIVETRANSCORDER_FORM_SELECT_NO_CONTACTS = "Sorry, no contacts in here"
+COM_XIVETRANSCORDER_FORM_LBL_ADDRESS_FROM = "<span class=\"hidden-phone\">Home <em>(Where to start </span>From<span class=\"hidden-phone\">)</em></span>"
+COM_XIVETRANSCORDER_FORM_LBL_ADDRESS_TO = "<span class=\"hidden-phone\">Destination <em>(Where to go </span>To<span class=\"hidden-phone\">)</em></span>"
+COM_XIVETRANSCORDER_FORM_LBL_TRANSCORDER_ESTIMATED_TIME = "Estimated Time"
+COM_XIVETRANSCORDER_FORM_LBL_TRANSCORDER_ESTIMATED_DISTANCE = "Estimated Distance"
+COM_XIVETRANSCORDER_FORM_LBL_TRANSCORDER_ORDER_ID = "Order ID"
+COM_XIVETRANSCORDER_FORM_SELECT_SPECIFIC = "%s specific"
+COM_XIVETRANSCORDER_FORM_LBL_TRANSPORT_DEVICE_AND_TYPE = "Transport Device / Type"
+COM_XIVETRANSCORDER_FORM_SELECT_TRANSPORT_DEVICE = "Please select a device"
+COM_XIVETRANSCORDER_FORM_SELECT_TRANSPORT_TYPE = "Please select a type"
+COM_XIVETRANSCORDER_FORM_LBL_ORDER_TYPE = "Order Type"
+COM_XIVETRANSCORDER_FORM_SELECT_ORDER_TYPE = "Please select a type"
+
+
+; TransCorderList
+COM_XIVETRANSCORDER_ORDER_LIST_TODAY = "Today's Orders"
+COM_XIVETRANSCORDER_ORDER_LIST_CAT = "Today's Orders for Category: "
+COM_XIVETRANSCORDER_ORDER_LIST_TH_ID = "#"
+COM_XIVETRANSCORDER_ORDER_LIST_TH_NAME = "Contact"
+COM_XIVETRANSCORDER_ORDER_LIST_TH_TIMESTAMP = "Time"
+COM_XIVETRANSCORDER_ORDER_LIST_TH_ADDRESS_FROM = "From"
+COM_XIVETRANSCORDER_ORDER_LIST_TH_ADDRESS_TO = "To"
+COM_XIVETRANSCORDER_ORDER_LIST_TH_STATUS = "Status"
+
+COM_XIVETRANSCORDER_ORDER_LIST_TD_MODIFIED = "Modified"
+
+
+
