added language strings

--- a/source/components/com_xivetranscorder/site/language/en-GB.com_xivetranscorder.ini
+++ b/source/components/com_xivetranscorder/site/language/en-GB.com_xivetranscorder.ini
@@ -50,4 +50,46 @@ COM_XIVETRANSCORDER_ORDER_LIST_TH_STATUS = "Status"
 COM_XIVETRANSCORDER_ORDER_LIST_TD_MODIFIED = "Modified"
 
 
+; Transport categories
+COM_XIVETRANSCORDER_CATEGORY_PATIENT_TRANSPORT = "Patient Transport"
+COM_XIVETRANSCORDER_CATEGORY_QUALIFIED_PATIENT_AMBULANCE_TRANSPORT = "Qulified Patient Transport"
+COM_XIVETRANSCORDER_CATEGORY_STUFF_TRANSPORT = "Stuff Transport"
+COM_XIVETRANSCORDER_CATEGORY_DESPATCHING_ORDER = "Despatching Order"
+COM_XIVETRANSCORDER_CATEGORY_TRANSPORT_TEMPLATE = "Transport Template"
 
+; TransCorder option categories
+COM_XIVETRANSCORDER_CATEGORY_TRANSPORT_DEVICE = "Transport Device"
+COM_XIVETRANSCORDER_CATEGORY_TRANSPORT_TYPE = "Transport Type"
+COM_XIVETRANSCORDER_CATEGORY_ORDER_TYPE = "Order Type"
+
+; TransCorder options
+COM_XIVETRANSCORDER_OPTION_TRANSPORT_DEVICE_TAXI_TRANSPORT_VEHICLE = "Taxi"
+COM_XIVETRANSCORDER_OPTION_TRANSPORT_DEVICE_RENTAL_TRANSPORT_VEHICLE = "Rental Transport"
+COM_XIVETRANSCORDER_OPTION_TRANSPORT_DEVICE_HANDICAPPED_TRANSPORT_VEHICLE = "Handicapped Transport"
+COM_XIVETRANSCORDER_OPTION_TRANSPORT_DEVICE_PATIENT_TRANSPORT_AMBULANCE = "patient Transport"
+COM_XIVETRANSCORDER_OPTION_TRANSPORT_DEVICE_RESCUE_TRANSPORT_AMBULANCE = "Rescue Transport"
+COM_XIVETRANSCORDER_OPTION_TRANSPORT_DEVICE_INTENSIVE_TRANSPORT_AMBULANCE = "Intensive Transport"
+
+COM_XIVETRANSCORDER_OPTION_TRANSPORT_TYPE_ABLE_TO_WALK = "Able to walk"
+COM_XIVETRANSCORDER_OPTION_TRANSPORT_TYPE_WHEELCHAIR = "Wheelchair"
+COM_XIVETRANSCORDER_OPTION_TRANSPORT_TYPE_SPECIAL_WHEELCHAIR = "Special Wheelchair"
+COM_XIVETRANSCORDER_OPTION_TRANSPORT_TYPE_CARRY_CHAIR = "Carry Chair"
+COM_XIVETRANSCORDER_OPTION_TRANSPORT_TYPE_LYING = "Lying"
+COM_XIVETRANSCORDER_OPTION_TRANSPORT_TYPE_ELECTRIC_WHEELCHAIR = "Electric Wheelchair"
+
+COM_XIVETRANSCORDER_OPTION_ORDER_TYPE_AMBULANT = "Ambulant"
+COM_XIVETRANSCORDER_OPTION_ORDER_TYPE_ADMISSION = "Admission"
+COM_XIVETRANSCORDER_OPTION_ORDER_TYPE_DIALYSIS = "Dialysis"
+COM_XIVETRANSCORDER_OPTION_ORDER_TYPE_DISMISSAL = "Dismissal"
+COM_XIVETRANSCORDER_OPTION_ORDER_TYPE_HOSPITAL_TRANSFER = "Hospital Transfer"
+COM_XIVETRANSCORDER_OPTION_ORDER_TYPE_INTER_HOSPITAL_TRANSFER = "Inter Hospital Transfer"
+COM_XIVETRANSCORDER_OPTION_ORDER_TYPE_STUFF_TRANSPORT = "Stuff Transport"
+COM_XIVETRANSCORDER_OPTION_ORDER_TYPE_ONKOLOGY_CHEMO = "Onkology / Chemotherapy"
+COM_XIVETRANSCORDER_OPTION_ORDER_TYPE_RADIATION_THERAPY = "Radiation Therapy"
+COM_XIVETRANSCORDER_OPTION_ORDER_TYPE_REPATRIATION = "Repatriation"
+COM_XIVETRANSCORDER_OPTION_ORDER_TYPE_REPATRIATION_FLIGHT_ATTENDANT = "Repatriation with Flight Attendant"
+COM_XIVETRANSCORDER_OPTION_ORDER_TYPE_PATIENT_TRANSFER = "Patient Transfer"
+COM_XIVETRANSCORDER_OPTION_ORDER_TYPE_EMERGENCY_ROOM = "Emergency Room"
+COM_XIVETRANSCORDER_OPTION_ORDER_TYPE_PHYSIOTHERAPY = "Physiotherapy"
+COM_XIVETRANSCORDER_OPTION_ORDER_TYPE_DAY_HOSPITAL = "Day Hospital"
+COM_XIVETRANSCORDER_OPTION_ORDER_TYPE_OTHER = "Other"
