Renamed component and removed old menu link entry

--- a/source/components/com_xivetranscorder/administrator/language/en-GB.com_xivetranscorder.ini
+++ b/source/components/com_xivetranscorder/administrator/language/en-GB.com_xivetranscorder.ini
@@ -1,5 +1,4 @@
-COM_XIVETRANSCORDER="XiveTOCA - Transport Order and Coordination Application"
-COM_XIVETRANSCORDER_MENULINK="XiveTOCA"
+COM_XIVETRANSCORDER="XiveTOCA"
 COM_XIVETRANSCORDER_COMPONENT_LABEL="XiveTransCorder"
 COM_XIVETRANSCORDER_CONFIGURATION="XiveTransCorder Configuration"
 COM_XIVETRANSCORDER_ACCESS_HEADING="Access"
