--- a/source/components/com_xivetranscorder/administrator/language/en-GB.com_xivetranscorder.sys.ini
+++ b/source/components/com_xivetranscorder/administrator/language/en-GB.com_xivetranscorder.sys.ini
@@ -1,6 +1,5 @@
-COM_XIVETRANSCORDER = "XiveTOCA - Transport Order and Coordination Application"
+COM_XIVETRANSCORDER = "XiveTOCA"
 COM_XIVETRANSCORDER_XML_DESCRIPTION = "The Transport Order and Coordination Application for XiveIRM"
-COM_XIVETRANSCORDER_MENULINK = "XiveTOCA"
 COM_XIVETRANSCORDER_TEST_LABEL = "Test label"
 COM_XIVETRANSCORDER_TITLE_TRANSCORDERS = "Transport Orders"
 COM_XIVETRANSCORDER_TRANSCORDERS_CATID = "Order Categories"
