added lang strings

--- a/source/components/com_xiveirm/administrator/language/en-GB.com_xiveirm.ini
+++ b/source/components/com_xiveirm/administrator/language/en-GB.com_xiveirm.ini
@@ -10,6 +10,7 @@ COM_XIVEIRM_CONFIGURATION = "Xiveirm Configuration"
 COM_XIVEIRM_ACCESS_HEADING = "Access"
 COM_XIVEIRM_COMPONENT_DESC = "Interoperable Relationship Management - the next Generation of CRM"
 COM_XIVEIRM_COMPONENT_LABEL = "XiveIRM"
+COM_XIVEIRM_CATEGORIES = "Core Categories"
 JACTION_VIEW = "View"
 JACTION_VIEW_COMPONENT_DESC = "This is a special feature to handle the view for the TabApps. It works independently from the viewing access levels. Control which subgroup has view access to this tab! It is used for the client ability!"
 COM_XIVEIRM_N_ITEMS_ARCHIVED = "%d items successfully archived"
@@ -49,7 +50,6 @@ COM_XIVEIRM_CONTACTS_CHECKED_OUT_TIME = "Checked out at"
 COM_XIVEIRM_CONTACTS_MODIFIED = "Modified"
 COM_XIVEIRM_CONTACTS_CATEGORY = "Category"
 COM_XIVEIRM_CONTACTS_CATEGORY_FILTER = "- Select Category -"
-COM_XIVEIRM_CONTACTS_CATEGORIES = "Contacts - Categories"
 COM_XIVEIRM_CONTACTS_CUSTOMER_ID = "Customer ID"
 COM_XIVEIRM_CONTACTS_COMPANY = "Company"
 COM_XIVEIRM_CONTACTS_TITLE = "Title"
@@ -71,19 +71,18 @@ COM_XIVEIRM_CONTACTS_MOBILE = "Mobile"
 COM_XIVEIRM_CONTACTS_EMAIL = "eMail"
 COM_XIVEIRM_CONTACTS_WEB = "Web"
 COM_XIVEIRM_CONTACTS_REMARKS = "Internal Remarks"
-COM_XIVEIRM_TITLE_OPTIONS = "Options"
+COM_XIVEIRM_TITLE_OPTIONS = "List Options"
 COM_XIVEIRM_OPTIONS_ID = "ID"
 COM_XIVEIRM_OPTIONS_USERGROUP = "Usergroup"
 COM_XIVEIRM_OPTIONS_CATEGORY = "Category"
 COM_XIVEIRM_OPTIONS_CATEGORY_FILTER = "- Select Category -"
-COM_XIVEIRM_OPTIONS_CATEGORIES = "Options - Categories"
 COM_XIVEIRM_OPTIONS_OPT_KEY = "Option Key"
 COM_XIVEIRM_OPTIONS_OPT_VALUE = "Option Value"
 COM_XIVEIRM_OPTIONS_OPT_NAME = "Option Name"
 COM_XIVEIRM_OPTIONS_ACCESS = "Access Level"
 COM_XIVEIRM_OPTIONS_ACCESS_FILTER = "- Select Access Level -"
 COM_XIVEIRM_OPTIONS_ORDERING = "Ordering"
-COM_XIVEIRM_TITLE_TABAPPS = "TabApps"
+COM_XIVEIRM_TITLE_TABAPPS = "App Configs"
 COM_XIVEIRM_TABAPPS_ID = "ID"
 COM_XIVEIRM_TABAPPS_USERGROUP = "Usergroup"
 COM_XIVEIRM_TABAPPS_PLUGIN = "Plugin"
@@ -212,3 +211,32 @@ COM_XIVEIRM_TITLE_DASHBOARD = "Dashboard"
 COM_XIVEIRM_TITLE_DASHBOARD_DESC = "Show the Dashboard"
 COM_XIVEIRM_TITLE_SEARCH = "Search"
 COM_XIVEIRM_TITLE_SEARCH_DESC = "Show the Search"
+
+
+; Category translations
+COM_XIVEIRM_CATEGORY_PARENT_XIVECONTACTS = "XiveContacts"
+COM_XIVEIRM_CATEGORY_XIVECONTACTS_CONTACTS = "Contacts"
+COM_XIVEIRM_CATEGORY_XIVECONTACTS_GENDER = "Gender"
+COM_XIVEIRM_CATEGORY_XIVECONTACTS_CONTACTS_CUSTOMER = "Customer"
+COM_XIVEIRM_CATEGORY_XIVECONTACTS_CONTACTS_SUPPLIER = "Supplier"
+COM_XIVEIRM_CATEGORY_XIVECONTACTS_CONTACTS_SUBCONTRACTOR = "Subcontractor"
+COM_XIVEIRM_CATEGORY_XIVECONTACTS_CONTACTS_LEAD = "Lead"
+COM_XIVEIRM_CATEGORY_XIVECONTACTS_CONTACTS_AGENCY = "Agency"
+; Options
+COM_XIVEIRM_XIVECONTACTS_GENDER_TRAIT_UNKNOWN = "Unknown"
+COM_XIVEIRM_XIVECONTACTS_GENDER_TRAIT_FEMALE = "Female"
+COM_XIVEIRM_XIVECONTACTS_GENDER_TRAIT_MALE = "Male"
+COM_XIVEIRM_XIVECONTACTS_GENDER_TRAIT_COMPANY = "Company"
+
+
+COM_XIVEIRM_CATEGORY_PARENT_XIVETRANSCORDER = "XiveTransCorder"
+COM_XIVEIRM_CATEGORY_XIVETRANSCORDER_PARENT_TRANSPORTATIONS = "Transportation Categories"
+COM_XIVEIRM_CATEGORY_XIVETRANSCORDER_TRANSPORTATIONS_PATIENT_TRANSPORT = "Patient Transport"
+COM_XIVEIRM_CATEGORY_XIVETRANSCORDER_TRANSPORTATIONS_DESPATCHING_ORDER = "Despatching Order"
+COM_XIVEIRM_CATEGORY_XIVETRANSCORDER_TRANSPORTATIONS_STUFF_TRANSPORT = "Stuff Transport"
+COM_XIVEIRM_CATEGORY_XIVETRANSCORDER_TRANSPORTATIONS_TRANSPORT_TEMPLATE = "Transport Template"
+
+COM_XIVEIRM_CATEGORY_XIVETRANSCORDER_PARENT_TRANSPORT_FORM = "Transport Forms"
+COM_XIVEIRM_CATEGORY_XIVETRANSCORDER_TRANSPORT_FORM_TRANSPORT_DEVICE = "Transport Device"
+COM_XIVEIRM_CATEGORY_XIVETRANSCORDER_TRANSPORT_FORM_TRANSPORT_TYPE = "Transport Type"
+COM_XIVEIRM_CATEGORY_XIVETRANSCORDER_TRANSPORT_FORM_ORDER_TYPE = "Order Type"
