--- a/source/plugins/plg_system_xiveirm/language/en-GB/en-GB.plg_system_xiveirm.sys.ini
+++ b/source/plugins/plg_system_xiveirm/language/en-GB/en-GB.plg_system_xiveirm.sys.ini
@@ -4,5 +4,5 @@
 ; @assetsLicense	devXive Proprietary Use License (http://www.devxive.com/license)
 ; @note		All ini files need to be saved as UTF-8 - No BOM
 
-PLG_SYSTEM_XIVEIRM = "System - XiveIRM System"
+PLG_SYSTEM_XIVEIRM = "System - XiveIRM Library System"
 PLG_SYSTEM_XIVEIRM_XML_DESC = "Check a variete of things to setup XiveIRM correctly"
