change the template framework to Nawala Framework

--- a/source/templates/tpl_xiveapptheme/language/en-GB/en-GB.tpl_xiveapptheme.ini
+++ b/source/templates/tpl_xiveapptheme/language/en-GB/en-GB.tpl_xiveapptheme.ini
@@ -1,9 +1,9 @@
-﻿; XAP Project
+; XAP Project
 ; Copyright (C) 1997 - 2013 devXive - research and development. All rights reserved.
 ; License GNU General Public License version 2 or later; see LICENSE.txt, see LICENSE.php
 ; Note : All ini files need to be saved as UTF-8 - No BOM
 
-TPL_XIVEAPPTHEME_XML_DESCRIPTION="The standard site template based on Bootstrap from Twitter"
+TPL_XIVEAPPTHEME_XML_DESC="The Application frontend template based on Bootstrap from Twitter"
 
 TPL_XIVEAPPTHEME_BACKGROUND_COLOR_DESC="Choose a background colour for static layouts. Default is #F4F6F7"
 TPL_XIVEAPPTHEME_BACKGROUND_COLOR_LABEL="Background Colour"
@@ -16,7 +16,6 @@ TPL_XIVEAPPTHEME_FONT_NAME_LABEL="Google Font Name"
 TPL_XIVEAPPTHEME_FONT_NAME_DESC="Example: Open+Sans or Source+Sans+Pro"
 TPL_XIVEAPPTHEME_LOGO_LABEL="Logo"
 TPL_XIVEAPPTHEME_LOGO_DESC="Upload a custom logo for the site template."
-
 
 TPL_XIVEAPPTHEME_FIXED_LAYOUT_LABEL = "Layout"
 TPL_XIVEAPPTHEME_FIXED_LAYOUT_LABEL_DESC = "Fixed Sidebar and Top Navbar (both are Responsive)"
