--- a/source/templates/tpl_xiveapptheme/language/en-GB/en-GB.tpl_xiveapptheme.sys.ini
+++ b/source/templates/tpl_xiveapptheme/language/en-GB/en-GB.tpl_xiveapptheme.sys.ini
@@ -1,24 +1,21 @@
-﻿; XAP Project
+; XAP Project
 ; Copyright (C) 1997 - 2013 devXive - research and development. All rights reserved.
 ; License GNU General Public License version 2 or later; see LICENSE.txt, see LICENSE.php
 ; Note : All ini files need to be saved as UTF-8 - No BOM
 
-TPL_XIVEAPPTHEME_POSITION_DEBUG="Debug"
-TPL_XIVEAPPTHEME_POSITION_POSITION-0="Search"
-TPL_XIVEAPPTHEME_POSITION_POSITION-10="Unused"
-TPL_XIVEAPPTHEME_POSITION_POSITION-11="Unused"
-TPL_XIVEAPPTHEME_POSITION_POSITION-12="Unused"
-TPL_XIVEAPPTHEME_POSITION_POSITION-13="Unused"
-TPL_XIVEAPPTHEME_POSITION_POSITION-14="Unused"
-TPL_XIVEAPPTHEME_POSITION_POSITION-15="Unused"
-TPL_XIVEAPPTHEME_POSITION_POSITION-1="Navigation"
-TPL_XIVEAPPTHEME_POSITION_POSITION-2="Breadcrumbs"
-TPL_XIVEAPPTHEME_POSITION_POSITION-3="Top center"
-TPL_XIVEAPPTHEME_POSITION_POSITION-4="Unused"
-TPL_XIVEAPPTHEME_POSITION_POSITION-5="Unused"
-TPL_XIVEAPPTHEME_POSITION_POSITION-6="Unused"
-TPL_XIVEAPPTHEME_POSITION_POSITION-7="Right"
-TPL_XIVEAPPTHEME_POSITION_POSITION-8="Left"
-TPL_XIVEAPPTHEME_POSITION_POSITION-9="Unused"
-TPL_XIVEAPPTHEME_POSITION_FOOTER="Footer"
-TPL_XIVEAPPTHEME_XML_DESCRIPTION="The standard site template based on Bootstrap from Twitter"
+TPL_XIVEAPPTHEME_XML_DESC="The Application frontend template based on Bootstrap from Twitter"
+
+TPL_XIVEAPPTHEME_POSITION_DEBUG = "Debug"
+TPL_XIVEAPPTHEME_POSITION_BREADCRUMB = "Breadcrumb"
+TPL_XIVEAPPTHEME_POSITION_CLIENT_ACTIVITY = "Client Activity"
+TPL_XIVEAPPTHEME_POSITION_DASHBOARD_TOP = "Dashboard Top"
+TPL_XIVEAPPTHEME_POSITION_DASHBOARD_LEFT = "Dashboard Left"
+TPL_XIVEAPPTHEME_POSITION_DASHBOARD_RIGHT = "Dashboard Right"
+TPL_XIVEAPPTHEME_POSITION_DASHBOARD_BOTTOM = "Dashboard Bottom"
+TPL_XIVEAPPTHEME_POSITION_FOOTER = "Footer"
+TPL_XIVEAPPTHEME_POSITION_LOGIN = "Login"
+TPL_XIVEAPPTHEME_POSITION_MY_TASKS = "My Tasks"
+TPL_XIVEAPPTHEME_POSITION_MY_MESSAGES = "My Messages"
+TPL_XIVEAPPTHEME_POSITION_SEARCH = "Search"
+TPL_XIVEAPPTHEME_POSITION_SIDEBAR = "Sidebar"
+TPL_XIVEAPPTHEME_POSITION_SIDEBAR_SHORTCUTS = "Sidebar Shortcuts"
