--- a/source/components/com_xiveirm/administrator/language/en-GB.com_xiveirm.sys.ini
+++ b/source/components/com_xiveirm/administrator/language/en-GB.com_xiveirm.sys.ini
@@ -7,7 +7,7 @@
 COM_XIVEIRM = "XiveIRM"
 COM_XIVEIRM_XML_DESCRIPTION = "Interoperable Relationship Management - the next Generation of CRM"
 COM_XIVEIRM_TEST_LABEL = "Test label"
-COM_XIVEIRM_TITLE_CONTACTS = "IRM-Contacts"
+COM_XIVEIRM_TITLE_CONTACTS = "Contacts"
 COM_XIVEIRM_TITLE_LIST_VIEW_CONTACTS = "Contacts"
 COM_XIVEIRM_TITLE_LIST_VIEW_CONTACTS_DESC = "Show a list of Contacts"
 COM_XIVEIRM_TITLE_ITEM_VIEW_CONTACT = "Single Contact"
@@ -27,4 +27,3 @@ COM_XIVEIRM_TITLE_DASHBOARD = "Dashboard"
 COM_XIVEIRM_TITLE_DASHBOARD_DESC = "Show the Dashboard"
 COM_XIVEIRM_TITLE_SEARCH = "Search"
 COM_XIVEIRM_TITLE_SEARCH_DESC = "Show the Search"
-COM_XIVETRANSCORDER = "IRM-TransCorder"
