changed lang strings

--- a/source/components/com_xiveirm/administrator/language/en-GB.com_xiveirm.ini
+++ b/source/components/com_xiveirm/administrator/language/en-GB.com_xiveirm.ini
@@ -12,7 +12,7 @@ COM_XIVEIRM_COMPONENT_DESC = "Interoperable Relationship Management - the next G
 COM_XIVEIRM_COMPONENT_LABEL = "XiveIRM"
 COM_XIVEIRM_CATEGORIES = "Core Categories"
 JACTION_VIEW = "View"
-JACTION_VIEW_COMPONENT_DESC = "This is a special feature to handle the view for the TabApps. It works independently from the viewing access levels. Control which subgroup has view access to this tab! It is used for the client ability!"
+JACTION_VIEW_COMPONENT_DESC = "This is a special feature to handle the view for the Plugins. It works independently from the viewing access levels. Control which subgroup has view access to this tab! It is used for the client ability!"
 COM_XIVEIRM_N_ITEMS_ARCHIVED = "%d items successfully archived"
 COM_XIVEIRM_N_ITEMS_ARCHIVED_1 = "%d item successfully archived"
 COM_XIVEIRM_N_ITEMS_CHECKED_IN_0 = "No item successfully checked in"
@@ -32,6 +32,8 @@ COM_XIVEIRM_ITEM_ID_SELECT_LABEL = "Select the item ID"
 COM_XIVEIRM_ITEM_ID_SELECT_LABEL_FORM = "Select the Item ID to Edit (Set up as 0 if you want to set up as add form)"
 COM_XIVEIRM_FIELDSET_ITEM_ID_SELECT_LABEL = "Required Settings"
 COM_XIVEIRM_FILTER_SELECT_LABEL = " - Select %s - "
+COM_XIVEIRM_SYSTEM_TEST_LBL = "Test label"
+COM_XIVEIRM_SYSTEM_TEST_DESC = "Test desc"
 COM_XIVEIRM_SYSTEM_USERGROUP_LBL = "Usergroup"
 COM_XIVEIRM_SYSTEM_USERGROUP_DESC = "Select the global Usergroup"
 COM_XIVEIRM_SYSTEM_ACCESS_LBL = "Viewing Access Level"
@@ -80,15 +82,15 @@ COM_XIVEIRM_OPTIONS_OPT_NAME = "Option Name"
 COM_XIVEIRM_OPTIONS_ACCESS = "Access Level"
 COM_XIVEIRM_OPTIONS_ACCESS_FILTER = "- Select Access Level -"
 COM_XIVEIRM_OPTIONS_ORDERING = "Ordering"
-COM_XIVEIRM_TITLE_TABAPPS = "App Configs"
-COM_XIVEIRM_TABAPPS_ID = "ID"
-COM_XIVEIRM_TABAPPS_USERGROUP = "Usergroup"
-COM_XIVEIRM_TABAPPS_PLUGIN = "Plugin"
-COM_XIVEIRM_TABAPPS_CATEGORY = "Main Category"
-COM_XIVEIRM_TABAPPS_CATEGORY_FILTER = "- Select Main Category -"
-COM_XIVEIRM_TABAPPS_CONFIG = "Config (JSON)"
-COM_XIVEIRM_TABAPPS_STATE = "State"
-COM_XIVEIRM_TABAPPS_ORDERING = "Ordering"
+COM_XIVEIRM_TITLE_PLUGINS = "App Configs"
+COM_XIVEIRM_PLUGINS_ID = "ID"
+COM_XIVEIRM_PLUGINS_USERGROUP = "Usergroup"
+COM_XIVEIRM_PLUGINS_PLUGIN = "Plugin"
+COM_XIVEIRM_PLUGINS_CATEGORY = "Main Category"
+COM_XIVEIRM_PLUGINS_CATEGORY_FILTER = "- Select Main Category -"
+COM_XIVEIRM_PLUGINS_CONFIG = "Config (JSON)"
+COM_XIVEIRM_PLUGINS_STATE = "State"
+COM_XIVEIRM_PLUGINS_ORDERING = "Ordering"
 COM_XIVEIRM_TITLE_LIST_VIEW_APIS = "Apis"
 COM_XIVEIRM_TITLE_LIST_VIEW_APIS_DESC = "Show a list of Apis"
 COM_XIVEIRM_TITLE_ITEM_VIEW_API = "Single Api"
@@ -187,23 +189,23 @@ COM_XIVEIRM_FORM_LBL_OPTION_ACCESS = "Access Level"
 COM_XIVEIRM_FORM_DESC_OPTION_ACCESS = "Access Level Desc"
 COM_XIVEIRM_FORM_LBL_OPTION_ORDERING = "Ordering"
 COM_XIVEIRM_FORM_DESC_OPTION_ORDERING = "Ordering Desc"
-COM_XIVEIRM_TITLE_TABAPP = "TabApp"
-COM_XIVEIRM_LEGEND_TABAPP = "TabApp"
-COM_XIVEIRM_FORM_LBL_TABAPP_ID = "ID"
-COM_XIVEIRM_FORM_DESC_TABAPP_ID = "ID Desc"
-COM_XIVEIRM_FORM_LBL_TABAPP_USERGROUP = "Client ID"
-COM_XIVEIRM_FORM_DESC_TABAPP_USERGROUP = "Select the usergroup this config is for. Note: The usergroup id could also be the client_id, which means that you have to select the upper group to take effect to all your employees. This is mainly used if the system run as a cloud service and every client have its own usergroup. To determine access, use the access levels (also known as view levels) below."
-COM_XIVEIRM_FORM_LBL_TABAPP_PLUGIN = "Plugin"
-COM_XIVEIRM_FORM_DESC_TABAPP_PLUGIN = "Select either a TabApp or a Widget for the relationship with the below category"
-COM_XIVEIRM_FORM_OPTION_TABAPP_CATEGORY = "Global (All Categories)"
-COM_XIVEIRM_FORM_LBL_TABAPP_CATEGORY = "Main Category"
-COM_XIVEIRM_FORM_DESC_TABAPP_CATEGORY = "Select the main category to assign a TabApp to. If we are in the client ability mode select Global (All) means all clients have access to it (like the core widget). You could use your own Categories, if you want more detailed categories (such as: customers are patients, companies, enterprise companies, small or middle sized companies, gold customers, etc...). If you have nested categories: select a parent category ensure that all child categories also have access to the tab or widget."
-COM_XIVEIRM_FORM_LBL_TABAPP_CONFIG = "Config"
-COM_XIVEIRM_FORM_DESC_TABAPP_CONFIG = "Config stored in json format. At this time i do not know what we save here later :) (may view and accesslvl to prevent user to see apps build for CEOs or CFOs)"
-COM_XIVEIRM_FORM_LBL_TABAPP_STATE = "State"
-COM_XIVEIRM_FORM_DESC_TABAPP_STATE = "State Desc"
-COM_XIVEIRM_FORM_LBL_TABAPP_ORDERING = "Ordering"
-COM_XIVEIRM_FORM_DESC_TABAPP_ORDERING = "Ordering Desc"
+COM_XIVEIRM_TITLE_PLUGIN = "Plugin"
+COM_XIVEIRM_LEGEND_PLUGIN = "Plugin"
+COM_XIVEIRM_FORM_LBL_PLUGIN_ID = "ID"
+COM_XIVEIRM_FORM_DESC_PLUGIN_ID = "ID Desc"
+COM_XIVEIRM_FORM_LBL_PLUGIN_USERGROUP = "Client ID"
+COM_XIVEIRM_FORM_DESC_PLUGIN_USERGROUP = "Select the usergroup this config is for. Note: The usergroup id could also be the client_id, which means that you have to select the upper group to take effect to all your employees. This is mainly used if the system run as a cloud service and every client have its own usergroup. To determine access, use the access levels (also known as view levels) below."
+COM_XIVEIRM_FORM_LBL_PLUGIN_PLUGIN = "Plugin"
+COM_XIVEIRM_FORM_DESC_PLUGIN_PLUGIN = "Select a Plugin for the relationship with the below category"
+COM_XIVEIRM_FORM_OPTION_PLUGIN_CATEGORY = "Global (All Categories)"
+COM_XIVEIRM_FORM_LBL_PLUGIN_CATEGORY = "Main Category"
+COM_XIVEIRM_FORM_DESC_PLUGIN_CATEGORY = "Select the main category to assign a Plugin to. If we are in the client ability mode select Global (All) means all clients have access to it (like the core widget). You could use your own Categories, if you want more detailed categories (such as: customers are patients, companies, enterprise companies, small or middle sized companies, gold customers, etc...). If you have nested categories: select a parent category ensure that all child categories also have access to the tab or widget."
+COM_XIVEIRM_FORM_LBL_PLUGIN_CONFIG = "Config"
+COM_XIVEIRM_FORM_DESC_PLUGIN_CONFIG = "Config stored in json format. At this time i do not know what we save here later :) (may view and accesslvl to prevent user to see apps build for CEOs or CFOs)"
+COM_XIVEIRM_FORM_LBL_PLUGIN_STATE = "State"
+COM_XIVEIRM_FORM_DESC_PLUGIN_STATE = "State Desc"
+COM_XIVEIRM_FORM_LBL_PLUGIN_ORDERING = "Ordering"
+COM_XIVEIRM_FORM_DESC_PLUGIN_ORDERING = "Ordering Desc"
 
 COM_XIVEIRM_TITLE_DASHBOARD = "Dashboard"
 COM_XIVEIRM_TITLE_DASHBOARD_DESC = "Show the Dashboard"
