--- a/source/components/com_xiveirm/administrator/language/en-GB.com_xiveirm.sys.ini
+++ b/source/components/com_xiveirm/administrator/language/en-GB.com_xiveirm.sys.ini
@@ -6,6 +6,7 @@
 
 COM_XIVEIRM = "XiveIRM"
 COM_XIVEIRM_XML_DESCRIPTION = "Interoperable Relationship Management - the next Generation of CRM"
+COM_XIVEIRM_TEST_LABEL = "Test label"
 COM_XIVEIRM_TITLE_CONTACTS = "Contacts"
 COM_XIVEIRM_TITLE_LIST_VIEW_CONTACTS = "Contacts"
 COM_XIVEIRM_TITLE_LIST_VIEW_CONTACTS_DESC = "Show a list of Contacts"
@@ -15,7 +16,7 @@ COM_XIVEIRM_TITLE_FORM_VIEW_CONTACT = "ContactForm"
 COM_XIVEIRM_TITLE_FORM_VIEW_CONTACT_DESC = "Show a form to add or edit a Contact"
 COM_XIVEIRM_CATEGORIES = "Core Categories"
 COM_XIVEIRM_TITLE_OPTIONS = "List Options"
-COM_XIVEIRM_TITLE_TABAPPS = "App Configs"
+COM_XIVEIRM_TITLE_PLUGINS = "App Configs"
 COM_XIVEIRM_TITLE_LIST_VIEW_APIS = "Apis"
 COM_XIVEIRM_TITLE_LIST_VIEW_APIS_DESC = "Show a list of Apis"
 COM_XIVEIRM_TITLE_ITEM_VIEW_API = "Single Api"
