changed lang strings

--- a/source/plugins/plg_irmapp_medicaldetails/language/en-GB/en-GB.plg_irmapp_medicaldetails.ini
+++ b/source/plugins/plg_irmapp_medicaldetails/language/en-GB/en-GB.plg_irmapp_medicaldetails.ini
@@ -8,3 +8,7 @@ PLG_IRMAPP_MEDICALDETAILS = "IRMTabsContact - Medical details"
 PLG_IRMAPP_MEDICALDETAILS_XML_DESC = "Tab Plugin for the IRMXive App which extends the master data with medically relevant fields and widgets"
 
 PLG_IRMAPP_MEDICALDETAILS_TABNAME = "Medical Details"
+
+PLG_IRMAPP_MEDICALDETAILS_FORM_LBL_NEW_ORDER = "New Order"
+PLG_IRMAPP_MEDICALDETAILS_FORM_PLEASE_SELECT_TYPE = "Please select an order type"
+PLG_IRMAPP_MEDICALDETAILS_FORM_LBL_INSURANCE = "Insurance Infos*"
