added state language string

--- a/source/components/com_xiveirm/site/language/en-GB.com_xiveirm.ini
+++ b/source/components/com_xiveirm/site/language/en-GB.com_xiveirm.ini
@@ -125,6 +125,7 @@ COM_XIVEIRM_CONTACT_FORM_ADDRESS_STREET = "Name of the street"
 COM_XIVEIRM_CONTACT_FORM_ADDRESS_HOUSENO = "House No"
 COM_XIVEIRM_CONTACT_FORM_ADDRESS_ZIP = "ZIP-Code"
 COM_XIVEIRM_CONTACT_FORM_ADDRESS_CITY = "Name of the city"
+COM_XIVEIRM_CONTACT_FORM_ADDRESS_REGION = "Name of the state/region"
 COM_XIVEIRM_CONTACT_FORM_ADDRESS_COUNTRY = "Name of the country"
 COM_XIVEIRM_CONTACT_FORM_PHONE_NUMBERS_LABEL = "Phone numbers"
 COM_XIVEIRM_CONTACT_FORM_PHONE = "Phone"
