--- a/source/components/com_xivetranscorder/site/language/en-GB.com_xivetranscorder.ini
+++ b/source/components/com_xivetranscorder/site/language/en-GB.com_xivetranscorder.ini
@@ -31,11 +31,11 @@ COM_XIVETRANSCORDER_FORM_LBL_TRANSCORDER_ESTIMATED_DISTANCE = "Estimated Distanc
 COM_XIVETRANSCORDER_FORM_LBL_TRANSCORDER_ORDER_ID = "Order ID"
 COM_XIVETRANSCORDER_FORM_SELECT_SPECIFIC = "%s specific"
 COM_XIVETRANSCORDER_FORM_LBL_TRANSPORT_DEVICE_AND_TYPE = "Transport Device / Type"
-COM_XIVETRANSCORDER_FORM_SELECT_TRANSPORT_DEVICE = "Please select a device"
-COM_XIVETRANSCORDER_FORM_SELECT_TRANSPORT_TYPE = "Please select a type"
+COM_XIVETRANSCORDER_FORM_OPTIONLIST_TRANSPORT_DEVICE_PLEASE_SELECT = "Please select a device"
+COM_XIVETRANSCORDER_FORM_OPTIONLIST_TRANSPORT_TYPE_PLEASE_SELECT = "Please select a type"
 COM_XIVETRANSCORDER_FORM_LBL_ORDER_TYPE = "Order Type"
-COM_XIVETRANSCORDER_FORM_SELECT_ORDER_TYPE = "Please select a type"
-
+COM_XIVETRANSCORDER_FORM_OPTIONLIST_ORDER_TYPE_PLEASE_SELECT = "Please select a type"
+COM_XIVETRANSCORDER_FORM_POILIST_PLEASE_SELECT = "Select a POI to prefill the address fields"
 
 ; TransCorderList
 COM_XIVETRANSCORDER_ORDER_LIST_TODAY = "Today's Orders"
@@ -66,7 +66,7 @@ COM_XIVETRANSCORDER_CATEGORY_ORDER_TYPE = "Order Type"
 COM_XIVETRANSCORDER_OPTION_TRANSPORT_DEVICE_TAXI_TRANSPORT_VEHICLE = "Taxi"
 COM_XIVETRANSCORDER_OPTION_TRANSPORT_DEVICE_RENTAL_TRANSPORT_VEHICLE = "Rental Transport"
 COM_XIVETRANSCORDER_OPTION_TRANSPORT_DEVICE_HANDICAPPED_TRANSPORT_VEHICLE = "Handicapped Transport"
-COM_XIVETRANSCORDER_OPTION_TRANSPORT_DEVICE_PATIENT_TRANSPORT_AMBULANCE = "patient Transport"
+COM_XIVETRANSCORDER_OPTION_TRANSPORT_DEVICE_PATIENT_TRANSPORT_AMBULANCE = "Patient Transport"
 COM_XIVETRANSCORDER_OPTION_TRANSPORT_DEVICE_RESCUE_TRANSPORT_AMBULANCE = "Rescue Transport"
 COM_XIVETRANSCORDER_OPTION_TRANSPORT_DEVICE_INTENSIVE_TRANSPORT_AMBULANCE = "Intensive Transport"
 
