fixed lang strings

--- a/source/plugins/plg_irmapp_contactcore/language/en-GB/en-GB.plg_irmapp_contactcore.ini
+++ b/source/plugins/plg_irmapp_contactcore/language/en-GB/en-GB.plg_irmapp_contactcore.ini
@@ -8,6 +8,6 @@ PLG_IRMAPP_CONTACTCORE = "IRMWidgetsContact - Core widget"
 PLG_IRMAPP_CONTACTCORE_XML_DESC = "Widget Plugin for the IRM Contact App which extends the base data view on the right with small helpers and/or statistics and other informations"
 
 PLG_IRMAPP_CONTACTCORE_CONTAINERNAME = "Core Widget"
-PLG_IRMAPP_CONTACTCORE_CREATED = "Created"
-PLG_IRMAPP_CONTACTCORE_LAST_MODIFIED = "Last modified"
+PLG_IRMAPP_CONTACTCORE_CREATED_ON = "Created on %s"
+PLG_IRMAPP_CONTACTCORE_LAST_MODIFIED_ON_BY = "Last modified on %s by %s"
 PLG_IRMAPP_CONTACTCORE_NOT_MODIFIED = "This contact has been never modified"
