--- a/source/plugins/plg_irmapp_tocacore/language/en-GB/en-GB.plg_irmapp_tocacore.ini
+++ b/source/plugins/plg_irmapp_tocacore/language/en-GB/en-GB.plg_irmapp_tocacore.ini
@@ -4,10 +4,10 @@
 ; @assetsLicense	devXive Proprietary Use License (http://www.devxive.com/license)
 ; @note		All ini files need to be saved as UTF-8 - No BOM
 
-PLG_IRMAPP_TOCACORE = "IRMApp Transcorder - Core widget"
-PLG_IRMAPP_TOCACORE_XML_DESC = "Core Plugin for the XiveIRM TransCorder App which provedes various basic informations"
+PLG_IRMAPP_TOCACORE = "IRMWidgetsTOCA - Core widget"
+PLG_IRMAPP_TOCACORE_XML_DESC = "Widget Plugin for the XiveIRM TransCorder App (TOCA) which extends the base data view on the right with small helpers and/or statistics and other informations"
 
 PLG_IRMAPP_TOCACORE_CONTAINERNAME = "Core Widget"
-PLG_IRMAPP_TOCACORE_CREATED = "Created"
-PLG_IRMAPP_TOCACORE_LAST_MODIFIED = "Last modified"
-PLG_IRMAPP_TOCACORE_NOT_MODIFIED = "This transport has been never modified"
+PLG_IRMAPP_TOCACORE_CREATED_ON = "Created on %s"
+PLG_IRMAPP_TOCACORE_LAST_MODIFIED_ON_BY = "Last modified on %s by %s"
+PLG_IRMAPP_TOCACORE_NOT_MODIFIED = "This contact has been never modified"
