--- a/source/plugins/plg_irmapp_tocacore/language/en-GB/en-GB.plg_irmapp_tocacore.sys.ini
+++ b/source/plugins/plg_irmapp_tocacore/language/en-GB/en-GB.plg_irmapp_tocacore.sys.ini
@@ -4,5 +4,5 @@
 ; @assetsLicense	devXive Proprietary Use License (http://www.devxive.com/license)
 ; @note		All ini files need to be saved as UTF-8 - No BOM
 
-PLG_IRMAPP_TOCACORE = "IRMApp Transcorder - Core widget"
-PLG_IRMAPP_TOCACORE_XML_DESC = "Core Plugin for the XiveIRM TransCorder App which provedes various basic informations"
+PLG_IRMAPP_TOCACORE = "IRMWidgetsTOCA - Core widget"
+PLG_IRMAPP_TOCACORE_XML_DESC = "Widget Plugin for the XiveIRM TransCorder App (TOCA) which extends the base data view on the right with small helpers and/or statistics and other informations"
