added and named new strings

--- a/source/components/com_xiveirm/site/language/en-GB.com_xiveirm.ini
+++ b/source/components/com_xiveirm/site/language/en-GB.com_xiveirm.ini
@@ -119,6 +119,8 @@ COM_XIVEIRM_CONTACT_FORM_TRAIT_GENDER_DESC = "Please note: Based on selected gen
 COM_XIVEIRM_CONTACT_FORM_TRAIT_DOB = "Date of Birth"
 COM_XIVEIRM_CONTACT_FORM_TRAIT_DOB_DESC = "Autodetects format from browser"
 COM_XIVEIRM_CONTACT_FORM_ADDRESS_LABEL = "Address"
+COM_XIVEIRM_CONTACT_FORM_SELECT_POI = "Select a POI to prefill the address"
+COM_XIVEIRM_CONTACT_FORM_ADDRESS_HELPER = "Type in at least: Street, Housenumber, City..."
 COM_XIVEIRM_CONTACT_FORM_ADDRESS_NAME = "Name (eg. name of an intitution, hospital, etc...)"
 COM_XIVEIRM_CONTACT_FORM_ADDRESS_NAME_ADD = "Additional infos, such as: Apartment 22"
 COM_XIVEIRM_CONTACT_FORM_ADDRESS_STREET = "Name of the street"
