--- a/source/components/com_xivetranscorder/site/language/en-GB.com_xivetranscorder.ini
+++ b/source/components/com_xivetranscorder/site/language/en-GB.com_xivetranscorder.ini
@@ -3,15 +3,19 @@ COM_XIVETRANSCORDER_ITEM_SAVED_SUCCESSFULLY="Item saved successfully"
 COM_XIVETRANSCORDER_ITEM_DELETED_SUCCESSFULLY="Item deleted successfully"
 COM_XIVETRANSCORDER_ITEM_NOT_LOADED="Could not load the item"
 COM_XIVETRANSCORDER_VIEW_FILE="[View File]"
-COM_XIVETRANSCORDER_ADD_ITEM="Add"
-COM_XIVETRANSCORDER_ADD_EMPTY_ITEM="Add empty"
-COM_XIVETRANSCORDER_COPY_ITEM="Copy"
-COM_XIVETRANSCORDER_COPY_THIS_ITEM="Copy this"
-COM_XIVETRANSCORDER_EDIT_ITEM="Edit"
-COM_XIVETRANSCORDER_DELETE_ITEM="Delete"
-COM_XIVETRANSCORDER_PUBLISH_ITEM="Publish"
-COM_XIVETRANSCORDER_UNPUBLISH_ITEM="Unpublish"
-COM_XIVETRANSCORDER_NO_ITEMS="There are no items in the list"
+COM_XIVETRANSCORDER_ADD_ITEM = "Add"
+COM_XIVETRANSCORDER_ADD_EMPTY_ITEM = "Add empty"
+COM_XIVETRANSCORDER_COPY_ITEM = "Copy"
+COM_XIVETRANSCORDER_COPY_THIS_ITEM = "Copy this"
+COM_XIVETRANSCORDER_EDIT_ITEM = "Edit"
+COM_XIVETRANSCORDER_CHECKSAVE_ITEM = "Check and Save"
+COM_XIVETRANSCORDER_CHECKUPDATE_ITEM = "Check and Update"
+COM_XIVETRANSCORDER_SAVE_WITH_BASIC_CHECK_ITEM = "Save with basic checks"
+COM_XIVETRANSCORDER_SAVE_WITHOUT_CHECK_ITEM = "Save without any checks"
+COM_XIVETRANSCORDER_DELETE_ITEM = "Delete"
+COM_XIVETRANSCORDER_PUBLISH_ITEM = "Publish"
+COM_XIVETRANSCORDER_UNPUBLISH_ITEM = "Unpublish"
+COM_XIVETRANSCORDER_NO_ITEMS = "There are no items in the list"
 COM_XIVETRANSCORDER_TITLE_FORM_VIEW_XXX_UPPER_INTERNAL_NAME_XXX_DESC="Show a form to add or edit a item"
 COM_XIVETRANSCORDER_TITLE_ITEM_VIEW_XXX_UPPER_INTERNAL_NAME_XXX_DESC="Show an item"
 COM_XIVETRANSCORDER_TITLE_LIST_VIEW_XXX_UPPER_INTERNAL_NAME_XXX_DESC="List all the items"
@@ -36,6 +40,17 @@ COM_XIVETRANSCORDER_FORM_OPTIONLIST_TRANSPORT_TYPE_PLEASE_SELECT = "Please selec
 COM_XIVETRANSCORDER_FORM_LBL_ORDER_TYPE = "Order Type"
 COM_XIVETRANSCORDER_FORM_OPTIONLIST_ORDER_TYPE_PLEASE_SELECT = "Please select a type"
 COM_XIVETRANSCORDER_FORM_POILIST_PLEASE_SELECT = "Select a POI to prefill the address fields"
+COM_XIVETRANSCORDER_FORM_CURRENT_STATE = "Current State"
+COM_XIVETRANSCORDER_FORM_STATUS_TRASHED_TRANSPORT = "Trashed Transport"
+COM_XIVETRANSCORDER_FORM_STATUS_INACTIVE_TRANSPORT = "Inactive Transport"
+COM_XIVETRANSCORDER_FORM_STATUS_ARCHIVED_TRANSPORT = "Archived Transport"
+COM_XIVETRANSCORDER_FORM_STATUS_CHANGE_CONTACT = "Change Contact"
+COM_XIVETRANSCORDER_FORM_STATUS_NO_STATE_ACCESS_TO_CHANGE_CONTACT = "You need state access to change this contact!"
+
+COM_XIVEIRM_HOURS = 'Hours'
+COM_XIVEIRM_MINUTES = 'Minutes'
+COM_XIVEIRM_KM = 'km'
+
 
 ; TransCorderList
 COM_XIVETRANSCORDER_ORDER_LIST_TODAY = "Today's Orders"
@@ -93,3 +108,4 @@ COM_XIVETRANSCORDER_OPTION_ORDER_TYPE_EMERGENCY_ROOM = "Emergency Room"
 COM_XIVETRANSCORDER_OPTION_ORDER_TYPE_PHYSIOTHERAPY = "Physiotherapy"
 COM_XIVETRANSCORDER_OPTION_ORDER_TYPE_DAY_HOSPITAL = "Day Hospital"
 COM_XIVETRANSCORDER_OPTION_ORDER_TYPE_OTHER = "Other"
+
